# gb_django

./: README.md
BraniacLMS/: pyproject.toml
BraniacLMS/braniaclms/: .env.sample  dump.rdb
BraniacLMS/braniaclms/authapp/: urls.py  views.py
BraniacLMS/braniaclms/authapp/migrations/: 0001_initial.py  0002_alter_customuser_username.py
BraniacLMS/braniaclms/authapp/templates/authapp/: change_password.html
BraniacLMS/braniaclms/authapp/templates/registration/: login.html
BraniacLMS/braniaclms/config/: settings.py  urls.py
BraniacLMS/braniaclms/locale/ru/LC_MESSAGES/: django.mo
BraniacLMS/braniaclms/mainapp/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
BraniacLMS/braniaclms/mainapp/context_processors/: __init__.py
BraniacLMS/braniaclms/mainapp/fixtures/: 002_courses.json
BraniacLMS/braniaclms/mainapp/migrations/: 0001_initial.py  0003_alter_news_options_coursefeedback.py
BraniacLMS/braniaclms/mainapp/templates/mainapp/: contacts.html  courses_detail.html  courses_list.html  doc_site.html  index.html  login.html  main_page.html  news.html  news_detail.html  news_list.html
BraniacLMS/braniaclms/templates/: base.html
BraniacLMS/braniaclms/templates/includes/: main_menu.html
BraniacLMS/tests/: test_braniaclms.py
