[tool.poetry]
name = "BraniacLMS"
version = "0.1.0"
description = ""
authors = ["Glukharev Oleg Anatolyevich <olegglukharev92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-markdownify = "^0.9.2"
Pillow = "^9.2.0"
social-auth-app-django = "^5.0.0"
django-crispy-forms = "^1.14.0"
django-redis = "^5.2.0"
celery = {extras = ["redis"], version = "^5.2.7"}
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"



[tool.poetry.dev-dependencies]
pytest = "^5.2"
django-debug-toolbar = "^3.6.0"
pytest-django = "^4.5.2"
selenium = "^4.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
